<resources>
    <string name="app_name">TD6</string>
    <string name="affichage_result">Affichage result</string>
    <string name="search">Search</string>
    <string name="result">Result</string>
    <string name="https_api_github_com_search_repositories_q">https://api.github.com/search/repositories?q=</string>
    <string name="repository">repository</string>
    <string name="call_api">Call API</string>
</resources>